Brought back everything from dsl

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
-lib
-data
-previous_scripts
-plots
-__pycache__
+.config/
+.idea/
+.ipynb_checkpoints/
+.landscape/
+.ssh/
+__pycache__/
+data/
+hist/
+lib/
 literature/
-hist
-venv
-output_tables
-overleaf
-.ipynb_checkpoints
+output_tables/
+overleaf/
+plots/
+previous_scripts/
+venv/
+.bash_history
+.motd_shown
+michael.tsesmelis@gpulogin.lambda.armasuisse.ch
+testing.py
 
